// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`PopoverBackup - Snapshots > matches snapshot for PopoverBackup with custom className 1`] = `
<div
  data-testid="popover"
>
  <div
    data-as-child="true"
    data-testid="popover-trigger"
  >
    <button
      class="hover:bg-white/10 custom-backup-style"
      data-size="icon"
      data-testid="button-ghost"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-circle-question-mark h-4 w-4 text-white"
        data-testid="circle-help-icon"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <circle
          cx="12"
          cy="12"
          r="10"
        />
        <path
          d="M9.09 9a3 3 0 0 1 5.83 1c0 2-3 3-3 3"
        />
        <path
          d="M12 17h.01"
        />
      </svg>
    </button>
  </div>
  <div
    class="w-[327px] p-6"
    data-testid="popover-content"
  >
    <div
      class="gap-2"
      data-testid="container"
    >
      <h4
        class="text-popover-foreground"
        data-size="sm"
        data-testid="heading-4"
      >
        Why is this important?
      </h4>
      <p
        class="leading-light text-sm font-medium text-muted-foreground"
        data-size="sm"
        data-testid="typography"
      >
        The secret seed for your pubky is like a master password. Anyone with access can take full control of your account. You are responsible for keeping your keys safe.
      </p>
    </div>
  </div>
</div>
`;

exports[`PopoverBackup - Snapshots > matches snapshot for default PopoverBackup 1`] = `
<div
  data-testid="popover"
>
  <div
    data-as-child="true"
    data-testid="popover-trigger"
  >
    <button
      class="hover:bg-white/10"
      data-size="icon"
      data-testid="button-ghost"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-circle-question-mark h-4 w-4 text-white"
        data-testid="circle-help-icon"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <circle
          cx="12"
          cy="12"
          r="10"
        />
        <path
          d="M9.09 9a3 3 0 0 1 5.83 1c0 2-3 3-3 3"
        />
        <path
          d="M12 17h.01"
        />
      </svg>
    </button>
  </div>
  <div
    class="w-[327px] p-6"
    data-testid="popover-content"
  >
    <div
      class="gap-2"
      data-testid="container"
    >
      <h4
        class="text-popover-foreground"
        data-size="sm"
        data-testid="heading-4"
      >
        Why is this important?
      </h4>
      <p
        class="leading-light text-sm font-medium text-muted-foreground"
        data-size="sm"
        data-testid="typography"
      >
        The secret seed for your pubky is like a master password. Anyone with access can take full control of your account. You are responsible for keeping your keys safe.
      </p>
    </div>
  </div>
</div>
`;
